<resources>
    <array name="fab_name">

    </array>

    <string name="app_name">读我吧</string>

    <string name="login">登陆/注册</string>
    <string name="sign">签名</string>
    <string name="sign_body">这个人很懒，没有写签名</string>

    <string name="book_list">书架</string>
    <string name="book_stack">书库</string>
    <string name="community">社区</string>

    <string name="book_detail">书籍详情</string>
    <string name="book_add">加入书架</string>
    <string name="book_start">开始阅读</string>
    <string name="book_continue">继续阅读</string>
    <string name="book_del">移除本书</string>
    <string name="book_author">作者</string>
    <string name="book_title">标题</string>
    <string name="book_info">书籍简介</string>
    <string name="book_chapter">章节列表</string>
    <string name="book_lastRead">上次阅读：</string>
    <string name="book_updateInfo">状态</string>
    <string name="book_serial">连载中</string>
    <string name="book_end">已完结</string>
    <string name="book_chapterCount" formatted="true">共%s章</string>
    <string name="book_chapterLength">章节数</string>
    <string name="book_updateTime">更新时间</string>
    <string name="book_noRead">还未开始阅读</string>

    <string name="read_load_context">正在加载下一章</string>

    <string name="navigation_drawer_open">打开导航抽屉</string>
    <string name="navigation_drawer_close">关闭导航抽屉</string>

    <string name="check_update">检查更新</string>
    <string name="version" formatted="true">当前版本：%s</string>
    <string name="donation">我要打赏作者</string>
    <string name="comment">给个好评</string>

    <string name="open">打开</string>
    <string name="setting">设置</string>
    <string name="exit">退出</string>
    <string name="close">关闭</string>
    <string name="test">测试</string>
    <string name="edit">编辑</string>
    <string name="search">搜索</string>
    <string name="search_result">搜索结果</string>
    <string name="add">添加</string>
    <string name="tools">工具</string>
    <string name="change_src">换源</string>
    <string name="share">分享</string>
    <string name="send">反馈</string>
    <string name="other">其他</string>
    <string name="info">关于</string>
    <string name="more">更多</string>

    <string name="dummy_content">　　卷入了三十三天所有巅峰强者的一场浩劫，人皇与他的对手最终一战，打碎了深渊世界，曾经封镇深渊魔王的神器，一张神秘的紫色卡片，却消失在时空漩涡中，横穿无尽的时空。 　　辽阔的蛮荒，武道文明还处于初始阶段，正在缓慢发展，很多蛮荒的绝世雄主，依旧在艰难的摸索着武道之路。 　　一个名叫易云的少年，拿着这张不知哪里来的紫色卡片，踏上征程。 　　这是一个瑰丽而又充满未知的真武世界，这是一个平凡少年成就绝世强者的传奇。 　　************************ 　　作者蚕茧里的牛，已有完本作品《武极天下》，书荒可以看一看。</string>
</resources>
