<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_updateInfo"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/updateInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="连载中"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_updateTime"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/updateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2016-12-12"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_chapterLength"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/chapterLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="10086章"/>

    </LinearLayout>

</LinearLayout>