<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="182dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/book_info"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:paddingStart="0dp"
            android:paddingEnd="64dp"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_updateInfo"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/serial_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="连载中" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_updateTime"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="2016-12-12" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_chapterLength"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/chapter_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="10086章" />
            </LinearLayout>

        </LinearLayout>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/split_line"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

        <TextView
            android:id="@+id/book_intro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:lineSpacingMultiplier="1.3"
            android:padding="@dimen/activity_horizontal_margin"
            android:maxLines="4"
            android:ellipsize="end"
            tools:text="书籍简介" />

    </LinearLayout>
</android.support.v7.widget.CardView>